WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267626
invalidateNodeListAndCollectionCachesInAncestorsForAttribute shouldn't call invalidateQuerySelectorAllResults in most cases
https://bugs.webkit.org/show_bug.cgi?id=267626
Summary
invalidateNodeListAndCollectionCachesInAncestorsForAttribute shouldn't call i...
Ryosuke Niwa
Reported
2024-01-17 00:37:57 PST
We only need to invalidate querySelector results when we're mutating class name since we only store results if query selectors were matching against tag name or class name.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2024-01-17 00:44:10 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22856
EWS
Comment 2
2024-01-18 09:53:32 PST
Committed
273183@main
(ffffbfafc4cd): <
https://commits.webkit.org/273183@main
> Reviewed commits have been landed. Closing PR #22856 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-01-18 09:54:16 PST
<
rdar://problem/121200449
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug